add blog posts, ad banner

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
    background:url("img/wood-plant-min.jpg");
-   background-size:cover;
-   -webkit-background-size: cover;
+   background-size:100% auto;
+   -webkit-background-size: 100% auto;
 }
 
 body {
@@ -65,6 +65,11 @@ font-style:italic;
 font-weight:bold;
 }
 
+.telephone-skype {
+	color:black;
+	font-weight:bold;
+}
+
 .description {
 max-width:380px;
 padding-left:20px;
@@ -119,11 +124,15 @@ box-shadow:1px 2px 5px grey;
 	padding-right:5px;
 }
 
+.nav-button span {
+	line-height:25px;
+}
+
 .nav-button:nth-child(1),
 .nav-button:nth-child(2),
 .nav-button:nth-child(3),
 .nav-button:nth-child(4) {
-margin-right:76px;
+margin-right:70px;
 }
 
 .nav-button:hover {
@@ -174,7 +183,7 @@ box-shadow:inset 1px 1px 3px #3c352c;
 }    
 
 .container-content-wrapper {
-	background-color:rgba(256, 240, 250, 0.4);
+	background-color:rgba(243, 203, 164, 0.5);
 	border-radius:10px;
 	display: inline-block;
     max-width: 770px;
@@ -339,6 +348,7 @@ border-radius:12px;
 text-align:center;
 width:50%;
 height:30px;
+line-height:25px;
 margin-left:auto;
 margin-right:auto;
 position:relative;
@@ -363,7 +373,7 @@ box-shadow:1px 1px 1px grey;
 	text-align:center;
 	margin-top:50px;
 	margin-bottom:2px;
-	text-shadow:1px 1px grey;
+	text-shadow:1px 1px 3px white;
 }
 
 
@@ -375,9 +385,177 @@ hr {
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
+.our-works-card {
+	width:90%;
+	min-height:200px;
+	margin-bottom:30px;
+	padding-top:40px;
+	padding-bottom:40px;
+	padding-right:1px;
+	pading-left:1px;
+	margin-left:auto;
+	margin-right:auto;
+	 transition:0.5s ease-out;
+}
+
+.our-works-card:hover {
+background:rgba(243, 203, 164, 0.8);
+border-radius:10px;
+box-shadow:0px 0px 5px grey;
+transform:scale(1.1);
+}
+
+
+.our-works-img:nth-child(odd) {
+	float:left;
+	margin-left:30px;
+}
+
+.our-works-card:hover .our-works-img:nth-child(odd) {
+	padding-left:40px;
+}
+
+.our-works-img:nth-child(even) {
+	float:right;
+	margin-right:30px;
+}
+
+.our-works-card:hover .our-works-img:nth-child(even) {
+	padding-right:40px;
+}
+
+.our-works-card-text:nth-child(odd) {
+	float:left;
+	padding-left:60px;
+	color:#f0f0f0;
+	transition:0.5s ease-out;
+}
+
+
+.our-works-card-text:nth-child(even) {
+	float:right;
+	padding-right:60px;
+	color:#f0f0f0;
+	transition:0.5s ease-out;
+}
+
+.our-works-card:hover .our-works-card-text {
+	color:#000;
+}
+
+
+.our-works-img {
+  display:inline-block;
+  width:200px;
+  height:200px;
+  border-radius:50%;
+  transition:0.7s ease-out;
+}
+
+.our-works-card:hover .our-works-img {
+	border-radius:5px;
+	box-shadow:0px 0px 5px grey;
+}
+
+.our-works-img-1 {
+	background:url("img/11.JPG");
+	 background-size: cover;
+   -webkit-background-size: cover;
+}
+.our-works-img-2 {
+	background:url("img/12.JPG");
+	 background-size:cover;
+   -webkit-background-size: cover;
+}
+.our-works-img-3 {
+	background:url("img/13.JPG");
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.our-works-img-4 {
+	background:url("img/14.JPG");
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.our-works-img-5 {
+	background:url("img/15.JPG");
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+
+
+.our-works-card-text {
+display:inline-block;
+width:50%;
+height:200px;
+line-height:20px;
+padding-top:20px;
+}
+
+
+/***********************************
+      BLOG
+***********************************/
+
+.content {
+margin:auto;
+margin-top:70px;
+} 
+
+.post {
+	width:90%;
+	margin-bottom:20px;
+	margin-right:auto;
+	margin-left:auto;
+	padding:30px;
+	padding-top:10px;
+	background-color:rgba(243, 203, 164, 0.8);
+	border-radius:15px;
+	box-shadow:0px 0px 5px grey;
+	position:relative;
+}     
+
+.post span {
+	line-height:23px;
+	border-radius:30px;
+	color:grey;
+	background-color:rgba(256,256,256,0.5);
+	vertical-align:middle;
+	text-align:center;
+position:absolute;
+display:inline-block;
+height:25px;
+width:60px;
+top:83%;
+left:92%;
+}
 
 
 
+/***********************************
+       JOB-OFFERS
+***********************************/
+
+.animated-add {
+	margin-top:60px;
+	width:100%;
+}
+
+.animated-add img {
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+/***********************************
+       CONTACT
+***********************************/
+
+ #map {
+        width: 400px;
+        height: 300px;
+        margin-top:40px;
+        }
 
 /***********************************
       FOOTER
